# project-templates

./: .gitignore  .gitmodules  .pre-commit-config.yaml  pyproject.toml
src/run/: __init__.py  create_package.py
