[project]
name = "run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M. Verbeek", email = "mark.verbeek@thermofisher.com" }
]
requires-python = ">=3.13"
dependencies = [
    "copier>=9.6.0",
]

[project.scripts]
run = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyroborugby"]

[tool.uv.sources]
template = { workspace = true }

[dependency-groups]
dev = [
    "pytest-cov>=6.1.0",
]
